<resources>
    <string name="app_name">MakerLink</string>
    <string name="title_home">Home</string>
    <string name="title_discovery">Explore</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_map_api_key">AIzaSyDPbNdxO7fkvc4YMR7SrzqqZK59Ea6uLj4</string>
    <string name="image">Image</string>
    <string name="submittedImage">Image</string>
    <string name="pick_image">Pick image</string>
    <string name="post_image">Post image</string>
    <string name="retrieveimage">retrieveImage</string>
    <string name="retrieved_image">retrieved Image</string>
    <string name="selected_image">selected image</string>
    <string name="btn_change_language">Change Language</string>
    <string name="settings">Settings</string>
    <string name="change_user_info">Change User Info</string>
    <string name="change_lender_info">Change Lender Info</string>
    <string name="choose_language">Choose Language</string>
    <string name="add_tool">Add Tool</string>
    <string name="logout">Log Out</string>
    <string name="back">Back</string>
    <string name="join">JOIN</string>
    <string name="or">OR</string>
    <string name="create">Create</string>
    <string name="create_community">Create Community</string>
    <string name="community_name">Community Name</string>
    <string name="domain">Domain</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="rent">Rent</string>
    <string name="rent1">Rent: </string>
    <string name="start_of_renting">Start of Renting</string>
    <string name="end_of_renting">End of Renting</string>
    <string name="description">Description</string>
    <string name="order">Order</string>
    <string name="ranking">Ranking</string>
    <string name="orders">Orders</string>
    <string name="playlists">Playlists</string>
    <string name="discover_your_passions">Discover your passions</string>
    <string name="common_domains">Common Domains</string>
    <string name="points">Points</string>
    <string name="profile_Section">Profile Section</string>
    <string name="threads_posted">Threads Posted</string>
    <string name="posted_by">Posted by</string>
    <string name="loading">Loading...</string>
    <string name="posted">Posted: </string>
    <string name="domain1">Domain: </string>
    <string name="document">Document</string>
    <string name="open_document">Open Document</string>
    <string name="comment_section">Comment Section</string>
    <string name="implement_if_time">Implement if you have time !</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_birth_date">Birth Date: DD-MM-YYYY</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_lender">Lender? Y / N</string>
    <string name="hint_address">Address</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="create_playlist_title">Create Your Playlist</string>
    <string name="give_it_a_name">Give it a name</string>
    <string name="playlist_hint">e.g. House Craft</string>
    <string name="choose_your_privacy">Choose your privacy</string>
    <string name="privacy_private">Private</string>
    <string name="ready">Ready?</string>
    <string name="create_button">CREATE</string>
    <string name="create_thread_title">Create Thread</string>
    <string name="thread_domain_label">Thread Domain</string>
    <string name="thread_domain_hint">e.g. Electronics, Carpentry...</string>
    <string name="thread_name_label">Thread Name</string>
    <string name="thread_name_hint">Give your thread a name</string>
    <string name="upload_thumbnail_label">Upload Thumbnail</string>
    <string name="click_me">Click Me</string>
    <string name="paste_document_url_label">Paste Document URL</string>
    <string name="url_hint">https://example.com/...</string>
    <string name="post_thread_button">Post Thread</string>
    <string name="points_prefix">This earns you</string>
    <string name="points_text">500 points</string>
    <string name="lender_info_title">Lender Info</string>
    <string name="rent_hint">Rent</string>
    <string name="tooltype_hint">Tool Type</string>
    <string name="start_time_hint">Start time of day</string>
    <string name="end_time_hint">End time of day</string>
    <string name="description_hint">Description</string>
    <string name="to_home_button">To home</string>
    <string name="leaderboard">Leader Board</string>
    <string name="settime">Set Time</string>
    <string name="change">Modify</string>
    <string name="upload_image_lender">Upload Image</string>
    <string name="your_lendings">Your Lendings</string>
    <string name="your_orders">Your Orders</string>
    <string name="type_message">Type message</string>
    <string name="set_date">Set date</string>
</resources>