<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="Profile" />

    <item
        android:id="@+id/navigation_exchange"
        android:icon="@drawable/map"
        android:title="@string/title_exchange" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/chat"
        android:title="@string/title_chats" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />


</menu>