<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.makerlink.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_exchange"
        android:name="com.example.makerlink.ui.exchange.ExchangeFragment"
        android:label="@string/title_exchange"
        tools:layout="@layout/fragment_exchange" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.makerlink.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.makerlink.ui.chats.ChatsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_chats" />

</navigation>