<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".navigation_pages.chats.AddCommunity"
    android:orientation="vertical">
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24_new"
        android:contentDescription="Back"
        android:padding="8dp"/>
    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/lightBrown"
        android:text="@string/join"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/montserrat_medium"/>
    <TextView
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/or"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_medium_italic"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/lightBrown"
        android:text="@string/create"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/createButton"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/montserrat_medium"/>



</LinearLayout>