<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".access.Lender"
    android:orientation="vertical"
    android:background="@drawable/backgroundsignup">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            android:background="@drawable/custom_background_login"
            android:backgroundTint="@color/darkCream">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="620dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="24dp">
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>

                <TextView
                    android:id="@+id/createText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lender_info_title"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_medium" />
                <androidx.cardview.widget.CardView
                    android:id="@+id/threadThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="6dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="onBtnPickClicked"
                    android:background="@color/white">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/thumbnailImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />

                        <ImageView
                            android:id="@+id/placeholderThumbnail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/photo"
                            android:layout_centerInParent="true"
                            app:tint="@color/lightBrown" />

                        <TextView
                            android:id="@+id/clickMeThumbnail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/placeholderThumbnail"
                            android:text="@string/click_me"
                            android:fontFamily="@font/montserrat_medium_italic"
                            android:textColor="#BFA088"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/rent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_background_login"
                    android:drawablePadding="8dp"
                    android:hint="@string/rent_hint"
                    android:textColorHint="@color/lightBrown"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/teal_500"
                    android:fontFamily="@font/montserrat_medium" />

                <EditText
                    android:id="@+id/tool"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_background_login"
                    android:drawablePadding="8dp"
                    android:hint="@string/tooltype_hint"
                    android:textColorHint="@color/lightBrown"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/teal_500"
                    android:fontFamily="@font/montserrat_medium" />

                <EditText
                    android:id="@+id/starttime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_background_login"
                    android:drawablePadding="8dp"
                    android:hint="@string/start_time_hint"
                    android:textColorHint="@color/lightBrown"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/teal_500"
                    android:fontFamily="@font/montserrat_medium" />

                <EditText
                    android:id="@+id/endtime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_background_login"
                    android:drawablePadding="8dp"
                    android:hint="@string/end_time_hint"
                    android:textColorHint="@color/lightBrown"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/teal_500"
                    android:fontFamily="@font/montserrat_medium" />

                <EditText
                    android:id="@+id/description_of_tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_background_login"
                    android:drawablePadding="8dp"
                    android:hint="@string/description_hint"
                    android:textColorHint="@color/lightBrown"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/teal_500"
                    android:fontFamily="@font/montserrat_medium" />

                <Button
                    android:id="@+id/homeButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/brown"
                    android:text="@string/to_home_button"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:cornerRadius="20dp"
                    android:fontFamily="@font/montserrat_medium" />

            </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>