<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main"
    android:background="@drawable/backgroundsignup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_background_login"
        android:backgroundTint="@color/darkCream">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="402dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_background_login"
                android:drawableLeft="@drawable/sharp_account_circle_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/teal_500"
                android:fontFamily="@font/montserrat_medium"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_background_login"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/teal_500"
                android:fontFamily="@font/montserrat_medium"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/brown"
                android:onClick="goToHome"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:fontFamily="@font/montserrat_medium"/>

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="7dp"
                android:padding="8dp"
                android:text="@string/dont_have_account"
                android:textAlignment="center"
                android:textColor="@color/link_color_selector"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_medium"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>