<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#AAB8C2">


    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:background="@color/better_blue">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24_newer"
            android:contentDescription="Back"
            android:layout_marginTop="5dp"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/sectionTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_lendings"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp" />

        <!-- First RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="ifContentScrolls"
            android:background="@color/darkCream"
            android:clipToPadding="false"
            android:paddingBottom="8dp" />


        <TextView
            android:id="@+id/sectionTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_orders"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="ifContentScrolls"
            android:background="@color/darkCream"
            android:clipToPadding="false"
            android:paddingBottom="8dp" />
    </LinearLayout>

</LinearLayout>